fix: resolve scrollbars

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,5 +1,6 @@
 .page {
   text-align: center;
+    overflow-y: hidden;
 
   h1 {
     margin: 3rem 0 1.5rem;
